tests/baselines/reference/missingCloseBrace.errors.txt
missingCloseBrace.ts(9,1): error TS1005: '}' expected.


==== missingCloseBrace.ts (1 errors) ====
    function base_init() {
        {
    
        }
    
        function me() {
    
        }
    
    
!!! error TS1005: '}' expected.
!!! related TS1007 missingCloseBrace.ts:1:22: The parser expected to find a '}' to match the '{' token here.